# iliad-pythonic-harmonisation-demo

./: README.md  constants.py  iliad_harmonisation_pipeline.ipynb  main.py  pyproject.toml  requirements.txt  update_library.py  utils.py
.github/workflows/: ci.yml
data/: sea_temp.json
jinja_automation/jinja_templates/: jinja_templates.py
jinja_automation/sparql_queries/: qudt_quantity_kind.sparql  qudt_unit.sparql
ontology_library/: utils.py
ontology_library/high_level_functions/: high_level_observation_functions.py
ontology_library/low_level_functions/: low_level_observation_functions.py  qudt_quantity_kind_functions.py  qudt_unit_functions.py
ontology_library/mid_level_functions/: mid_level_observation_functions.py
output/: sea_temp_observations.ttl  sea_temp_observations_notebook.ttl
tests/: test_observations.py  test_utils.py
